# Real-Time-Financial-Data-Aggregator-API

./: .dockerignore  .gitignore  README.md  docker-compose-production.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_client.py
app/: models.py  serializers.py  tasks.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/real_time/: consumers.py  middleware.py  routing.py
config/: asgi.py  celery.py  settings.py  urls.py
